Fix CORS environment variable configuration